--- a/app/helpers/_variables.scss
+++ b/app/helpers/_variables.scss
@@ -11,3 +11,5 @@ $danger-hover-color:#d34221;
 $discourage-color:#b2b2b2;
 $discourage-hover-color:#a6a6a6;
 $disabled-color:#ddd;
+
+$ava1:'black' !default;
